# schoolio

./: README.md
backend/: Cargo.toml
backend/src/: handler.rs  main.rs  model.rs  response.rs  route.rs
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/Display/: index.tsx
frontend/src/components/Form/: index.tsx
frontend/src/components/Navbar/: index.tsx
frontend/src/components/Table/: index.tsx
frontend/src/layout/: index.tsx
frontend/src/mutation/: index.ts
frontend/src/query/: index.ts
frontend/src/store/: index.ts
frontend/src/types/: index.ts
