[package]
name = "schoolio"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.11"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
uuid = { version = "1.3.0", features = ["v4","serde"] }

[dev-dependencies]
axum-test-helper = "0.*" # alternatively specify the version as "0.3.0"